user: service with data layer
